--- a/src/css/materialize.css
+++ b/src/css/materialize.css
@@ -2157,9 +2157,17 @@ html {
 /**
  * Remove default margin.
  */
+ 
 body {
-  margin: 0;
-}
+    margin: 0;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -3391,6 +3399,10 @@ nav ul a span.badge {
   margin: 0;
   font-size: 20px;
   line-height: 40px;
+}
+
+.row.my-row {
+  margin: 2% 5%;
 }
 
 .row:after {
